syntax = "proto3";

package sqrt;

message SqrtRequest {
  int32 number = 1;
}

message SqrtResponse {
  double square_root = 1;
}

message SqrtManyTimesRequest {
  int32 number = 1;
}

message SqrtManyTimesResponse {
  double square_root = 1;
}

service SqrtService {
  rpc GetSqrt(SqrtRequest) returns(SqrtResponse) {}

  rpc GetSqrtManyTimes(SqrtManyTimesRequest) returns(stream SqrtManyTimesResponse) {}
}